# delta-farmer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  config.example.toml  pyproject.toml  readme.md
apps/: ethereal.py  hyena.py  hyperliquid.py  nado.py  omni.py  onyx.py  pacifica.py  zero1.py
clients/: __init__.py  ethereal.py  hyena.py  hyperliquid.py  nado.py  omni.py  onyx.py  pacifica.py  zero1.py
configs.example/: ethereal.toml  nado.toml  omni.toml  opinion.toml  pacifica.toml
docs/: CARA_PAKE.md  SETUP_GUIDE.md
lib/: __init__.py  cli.py  crypto.py  decorators.py  errors.py  http.py  logger.py  models.py  store.py  table.py  telegram.py  telegram_commands.py  telemetry.py  unwaf.py  utils.py
scripts/: claim_opn.py  smoke.py  vault.py  weekly.py
strategy/: __init__.py  delta.py  execution.py  models.py  planner.py  runner.py  strategy.py  trading.py
tests/: test_planner.py  test_spread_guard.py  test_strategy.py  test_telegram_commands.py
tools/: spread_sampler.py
utils/: cli.py  crypto.py  helpers.py  http.py  store.py  telemetry.py
